--- a/Checkpoint_1/style.css
+++ b/Checkpoint_1/style.css
@@ -478,6 +478,10 @@ header .buttons i {
         width: 95% !important;
         font-size: 1rem;
     }
+
+    .btn {
+        left: 38%;
+    }
 }
 
 
